# nexus_ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  env.example  executive_summary.md  system_architecture.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai/: adaptive_learning.py  distributed_neural_network.py  main.py  requirements.txt  self_healing.py  symbiotic_interface.py
api/: main.py  requirements.txt
core/: Cargo.toml  README.md
core/src/: agent_orchestration.rs  cognitive_foundation.rs  intelligence_synthesis.rs  lib.rs  main.rs  quantum_substrate.rs  security_governance.rs
docs/: api-reference.md  architecture.md  deployment.md  security.md  troubleshooting.md
docs/community/: community-management.md  discord-setup.md
docs/examples/: basic-usage.md
infra/terraform/: main.tf  variables.tf
scripts/: deploy.ps1  monitor.ps1  test.ps1
ui/src/: App.tsx
ui/src/pages/Dashboard/: Dashboard.tsx
